@@ -16,6 +16,8 @@ ff-seismic-scanner=Scans connected landmasses, outputting significant pollution.
 [item-name]
 ff-container=Container
 ff-charged-battery=Charged battery
+ff-battery-pack=Battery pack
+ff-charged-battery-pack=Charged battery pack
 x-transport-science-pack=Transport science pack
 ff-hot-titansteel-plate=Hot titansteel plate
 ff-titansteel-plate=Titansteel plate
@@ -23,6 +25,8 @@ ff-slag=Slag
 deadlock-crate-item=Container: __2__ × __1__
 
 [item-description]
+battery=Holds 4 MJ when charged.
+ff-battery-pack=Holds 20 MJ when charged.
 landfill=Can be placed on non-deep water to create terrain you can build on.
 bbr-rail-common=Cannot be placed on deep water.
 
